--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - sudo apt update
       - sudo apt install git -y
-      - sudo apt install nodejs
+      - sudo apt install nodejs -y
       - node -v
       - sudo apt install npm
   pre_build:
